--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@
 .card{
    position: absolute;
    margin-top: 50px;
-   margin-left: 530px;
+   margin-left: 500px;
    padding-left: 70px;
    padding-right: 60px;
+   height: 370px;
    /* margin-right: 85%; */
    border: 2px solid;
    border-radius: 8px;
@@ -19,16 +20,14 @@
    
 }
 .btn-text{
-    width: 80px;
-    height: 50px;
-    padding: 50px;
-    margin-top: 50px;
+    width: 90px;
+    height: 48px;
+    margin-top: 52px;
     border-radius: 7px;
     border: none;
-    background-color: black;
+    background-color: rgb(22, 22, 22);
     color: aliceblue;
-    font-size: 15px;
-    padding: 10px;
+    font-size: 18px;
     margin-left: 20px;
 }
 
